Fixed bug relating to content being cut off at bottom of print preview screen

--- a/cv-builder/src/styling/CVOutput.css
+++ b/cv-builder/src/styling/CVOutput.css
@@ -4,12 +4,3 @@
     border: 2px solid;
     overflow: scroll;
 }
-
-@media print {
-    html, body {
-      height: 100vh; /* Use 100% here to support printing more than a single page*/
-      margin: 0 !important;
-      padding: 0 !important;
-      overflow: hidden;
-    }
-  }
